[tool.poetry]
name = "passive_auto_design"
version = "0.1.12"
description = ""
authors = ["Patarimi <38954040+Patarimi@users.noreply.github.com>"]
license = "MIT"

[tool.semantic_release]
version_variable = [
    "setup.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
upload_to_pipy = true
upload_to_release = true
build_command = "pip install poetry && poetry build"


[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.3"
matplotlib = "^3.5.2"
scipy = "^1.8.0"
scikit-rf = ">=0.22.1,<0.24.0"
PyYAML = "^6.0"
pydantic = "^1.9.0"
streamlit = "^1.10.0"

[tool.poetry.dev-dependencies]
setuptools = "^60.10.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"
mkdocs-material = "^8.3.6"
mkdocstrings = "^0.19.0"
mkdocs = "^1.3.0"
pytkdocs = {extras = ["numpy-style"], version = "^0.16.1"}
mkdocs-jupyter = "^0.21.0"
mkdocs-gen-files = "^0.3.4"
mkdocs-section-index = "^0.3.4"
mkdocs-literate-nav = "^0.4.1"
mkdocstrings-python = "^0.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
