[tool.poetry]
name = "passive_auto_design"
version = "0.1.12"
description = ""
authors = ["Patarimi <38954040+Patarimi@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.3.1"
mkdocs-material = "^8.3.6"
mkdocstrings = "^0.19.0"
pytkdocs = {extras = ["numpy-style"], version = "^0.16.1"}
mkdocs-gen-files = "^0.3.4"
mkdocs-section-index = "^0.3.4"
mkdocs-literate-nav = "^0.4.1"
mkdocstrings-python = "^0.7.1"


[tool.poetry.group.tests.dependencies]
pytest = "^7.2.0"
pytest-cov = "^3.0.0"
tox = "^3.27.0"



[tool.poetry.group.web.dependencies]
streamlit = "^1.13.0"
bokeh = "^2.4.3"



[tool.poetry.group.dev.dependencies]
setuptools = "^65.5.1"
flake8 = ">=4.0.1,<6.0.0"
black = "^22.6.0"
pyupgrade = "^3.2.0"
pre-commit = "^2.20.0"
commitizen = "^2.37.0"

[tool.semantic_release]
version_variable = [
    "setup.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
upload_to_pipy = true
upload_to_release = true
build_command = "pip install poetry && poetry build"


[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<3.11"
numpy = "^1.22.3"
matplotlib = "^3.5.2"
scipy = "^1.8.0"
scikit-rf = ">=0.22.1"
PyYAML = "^6.0"
klayout = "^0.27.12"
pydantic = "^1.10.2"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.11"
tag_format = "v$version"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
